--- a/output.html
+++ b/output.html
@@ -6,6 +6,7 @@
 	<div class="container">
 	<h1>Welcome to my page!</h1></div>
 	<p>This is a paragraph.</p>
+	<p>This is another paragraph</p>
 	<img src="image.jpg" alt="Image"></img>
 	<a href="https://www.example.com">Link</a>
 	<ul>
@@ -23,5 +24,12 @@
 	<tr>
 	<td>Row 2, Cell 1</td>
 	<td>Row 2, Cell 2</td></tr></tbody></table>
+	
+	<p>Sample input fields!</p>
+	<br>
+	<input type="text" name="textfieldOne" id="textfield_id">
+	<br>
+	<input type="password" name="passwordfieldOne" id="passwordfield_id">
+
 	<hr></hr>
 </body>
